test_regress/t/t_tri_pull2_bad.out
%Error-UNSUPPORTED: t/t_tri_pull2_bad.v:12:11: Unsupported: Conflicting pull directions.
                                             : ... In instance t
   12 |    pullup p1(A);
      |           ^~
                    t/t_tri_pull2_bad.v:22:13: ... Location of conflicting pull.
   22 |    pulldown p2(A);
      |             ^~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
